2004-12-16 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.[h|cxx] : add the Print method
   * src/gdcmPixelReadConvert.[h|cxx] : add the generalized Print method
   * src/gdcmDocEntrySet.h : generalize the Print with the PrintLevel
   * src/gdcmDocument.h : remove the PrintLevel informations
   * Example/PrintFile.cxx : use the new gdcm::File::Print

2004-12-16 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.cxx : Add the code of ReplaceOrCreateByNumber to not have
     problems when compiling with the python wrapping

2004-12-16 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.cxx : bug fix. Omitted a Push in the DocEntryArchive when
     writting in ImplicitVR

2004-12-12 Jean-Michel Rouet <jm.rouet@noos.fr>
   * src/gdcmPixelReadConvert.[h|cxx], src/gdcmJpeg*.cxx : new handling of
     JPEG decompression, especially when dicom frames are split into several
     JPEG Fragments. This makes use of jpeg decompression from memory buffer.
     This solves reading for example gdcm-JPEG-Lossless_Thoravision.dcm.

2004-12-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmHeader.cxx : change the initialisation of default header.
     Now, this header is readable by gdm, e-film, DicomWorks

2004-12-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.[h|cxx], gdcmPixelReadConvert.[h|cxx] : change the API.
     Rename Decompressed to Raw
   * Use the API changes in gdcm::File.
   * vtk/vtkGdcmWriter.[h|cxx] : add the possibility to write in other modes
     Memory leaks fixed

2004-12-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.cxx, Example/WriteDicomSimple.cxx : add comments for
     each added entry in the header. Replace the 'Planes' field by the 'Number
     of Frames' field

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : now can write stack of images.