@@ -13,6 +13,7 @@ INCLUDE_DIRECTORIES(
 )
 
 SET(libgdcm_la_SOURCES
+   gdcmBase.cxx
    gdcmBinEntry.cxx
    gdcmDebug.cxx
    gdcmDicomDir.cxx
