@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmDicomDir.h,v $
   Language:  C++
-  Date:      $Date: 2004/12/03 20:16:57 $
-  Version:   $Revision: 1.41 $
+  Date:      $Date: 2004/12/16 13:46:36 $
+  Version:   $Revision: 1.42 $
   
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -56,7 +56,6 @@ public:
    ~DicomDir();
 
    /// \brief   canonical Printer 
-   /// \sa    SetPrintLevel
    void Print(std::ostream &os = std::cout);
 
    /// Informations contained in the parser
